# QR-light

./: CMakeLists.txt  README.md
gui/: CMakeLists.txt
gui/detail/: OptionPanel.cpp  OptionPanel.h  QrWrapper.cpp  QrWrapper.h  main.cpp  mainframe.cpp  mainframe.h
gui/rc/: mainframe.qrc  mainframe.rc  style.qss
gui/ui/: OptionPanel.ui  mainframe.ui
util/: CMakeLists.txt  qrutil.h
util/detail/: QrCode.hpp  qrutil.cpp
